fix: update UISiteControl positioning; adjust top and left values for correct alignment

--- a/src/ts/ui/overlay/site-control/UISiteControl.module.css
+++ b/src/ts/ui/overlay/site-control/UISiteControl.module.css
@@ -1,5 +1,5 @@
 .ui-site-control {
     position: absolute;
-    top: calc(var(--grid-cell-height) * 5);
-    left: calc(var(--grid-cell-width) * 5);
+    top: calc(var(--grid-cell-height) * 6);
+    left: calc(var(--grid-cell-width) * 6);
 }
